--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tailwindcss/vite": "^4.1.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "country-telephone-data": "^0.6.3",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
@@ -31,12 +32,15 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.3",
     "react-world-flags": "^1.6.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "zod": "^4.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
+    "@types/country-data": "^0.0.5",
+    "@types/country-telephone-data": "^0.6.3",
     "@types/node": "^24.0.13",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
